added github link

--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -24,6 +24,10 @@
       <ion-label>מפתח</ion-label>
       <span item-right>אלעד אלרם</span>
     </ion-item>
+    <ion-item detail href="https://github.com/elelad/Sofrim" target="_blank">
+      <ion-icon slot="start" name="logo-github" color="secondary"></ion-icon>
+      <ion-label>קוד פתוח</ion-label>
+    </ion-item>
     <ion-item detail href='mailto:elelad.dev@gmail.com' rel="_blank">
       <ion-icon slot="start" name="mail" color="secondary"></ion-icon>
       <ion-label>צור קשר</ion-label>
