--- a/src/app/components/fab/fab.component.html
+++ b/src/app/components/fab/fab.component.html
@@ -1,4 +1,4 @@
-<ion-fab *ngIf="showFab" vertical="bottom" horizontal="end">
+<ion-fab *ngIf="showFab" vertical="bottom" horizontal="start">
   <ion-fab-button [routerLink]="'/roy'" routerDirection="root">
     <div class="fapBtn">&nbsp;</div>
   </ion-fab-button>
