--- a/src/app/pages/reminder/reminder.page.html
+++ b/src/app/pages/reminder/reminder.page.html
@@ -8,7 +8,7 @@
     <ion-card-content>
       <ion-item lines="none" detail="false" class="ion-text-wrap">
         <ion-label>
-          <div class="ion-text-center">רוצה להסיר את האפליקציה ולקבל תזכורת להתקנה בשנה הבאה?
+          <div class="ion-text-center ion-text-wrap">רוצה להסיר את האפליקציה ולקבל תזכורת להתקנה בשנה הבאה?
             <br>
             ניתן להשאיר פרטים ובע״ה נתראה:
           </div>
