--- a/src/app/pages/accessibility/accessibility.page.html
+++ b/src/app/pages/accessibility/accessibility.page.html
@@ -1,6 +1,6 @@
 <app-navbar [navTitle]="'נגישות'" [accBtn]="false" [shareBtn]="false"></app-navbar>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-card color="medium">
     <ion-card-content>
       נעשו מאמצים רבים בכדי להנגיש את האתר והאפליקציה.<br>
