--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -77,7 +77,7 @@ ion-chip {
     border: none;
     border-radius: 50px;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.8);
-    background-color: rgba(0, 0, 0, 0.8); //map-get($colors,light);
+    background-color: var(--ion-color-primary); //  rgba(0, 0, 0, 0.8);
 }
 
 .dateInput {
