--- a/src/app/pages/privacy/privacy.page.html
+++ b/src/app/pages/privacy/privacy.page.html
@@ -1,7 +1,7 @@
 <app-navbar [navTitle]="'פרטיות'" [accBtn]="false" [shareBtn]="false"></app-navbar>
 
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-card color="medium">
     <ion-card-content class="ion-text-center">
       האפליקציה לא אוספת את המידע הפרטי שלך.<br>
