--- a/src/app/pages/settings/settings.page.scss
+++ b/src/app/pages/settings/settings.page.scss
@@ -1,6 +1,7 @@
 ion-list{
     max-width: 800px;
     background-color: var(ion-color-light);
-    margin: 10px auto;
+    margin: 0 auto;
+    
 }
 
