--- a/src/app/pages/roy/roy.page.html
+++ b/src/app/pages/roy/roy.page.html
@@ -16,7 +16,7 @@
         באפליקציה
         יבטיח ספירה שלמה לכל המשתמשים.</p>
       <br>
-      <p>רועי בן 35, נפטר תוך זמן קצר ממחלת הסרטן, לאורך כל תקופת המחלה הסתובב עם חיוך על הפנים ואופטימיות מדבקת והמשיך
+      <p>רועי בן 35, נפטר תוך זמן קצר ממחלת הסרטן בי״ג אייר התשע״ו (21/05/2016). לאורך כל תקופת המחלה הסתובב עם חיוך על הפנים ואופטימיות מדבקת והמשיך
         לחיות
         את חייו לצד המחלה. הוא לימד את כולנו שיעור גדול באמונה, דבקות שמחה ואופטימיות.</p>
       <br>
