--- a/src/app/pages/about/about.page.html
+++ b/src/app/pages/about/about.page.html
@@ -28,16 +28,16 @@
       <ion-icon slot="start" name="logo-github" color="secondary"></ion-icon>
       <ion-label>קוד פתוח</ion-label>
     </ion-item>
-    <ion-item *ngIf="plt.is('desktop') || plt.is('mobileweb'); else elseBlock" detail href='mailto:elelad.dev@gmail.com' rel="_blank">
+    <ion-item *ngIf="plt.is('desktop') || plt.is('mobileweb'); else elseBlock" detail href='mailto:sofrim@sofrim.co.il' rel="_blank">
       <ion-icon slot="start" name="mail" color="secondary"></ion-icon>
       <ion-label>צור קשר</ion-label>
-      <span class="ion-padding" slot="end">elelad.dev@gmail.com</span>
+      <span class="ion-padding" slot="end">sofrim@sofrim.co.il</span>
     </ion-item>
     <ng-template #elseBlock >
       <ion-item detail (click)="mail()" rel="_blank">
         <ion-icon slot="start" name="mail" color="secondary"></ion-icon>
         <ion-label>צור קשר</ion-label>
-        <span class="ion-padding" slot="end">elelad.dev@gmail.com</span>
+        <span class="ion-padding" slot="end">sofrim@sofrim.co.il</span>
       </ion-item>
     </ng-template>
   </ion-list>
